bgl.glGetUniformLocation() wrongly always returns -1 #83203

Closed
opened 2020-11-29 22:24:24 +01:00 by stephen leger · 11 comments
Member

System Information
Operating system: Mint 20
Graphics card: Nvidia 1070

Blender Version
Broken: 2.91.0-906ff7b8fea8-linux64 (maybe sooner, cant tell and will no more work later)
Worked: 2.91.0-2c61c3d733cf-linux64

Short description of error
bgl.glGetUniformLocation() wrongly always returns -1

Exact steps for others to reproduce the error

Open a console and run

import gpu
import bgl

vert_3d = '''
uniform mat4 MVP;

in vec3 pos;
in float primitive_id;
out float primitive_id_var;

void main()
{
    primitive_id_var = primitive_id;
    gl_Position = MVP * vec4(pos, 1.0);
    
}
'''


primitive_id_frag = '''
uniform float offset;
in float primitive_id_var;
out vec4 fragColor;

void main()
{
    fragColor = vec4(offset + primitive_id_var, 0, 0, 0);
}
'''
shader = gpu.types.GPUShader(vert_3d, primitive_id_frag)
bgl.glGetUniformLocation(shader.program, 'MVP')

under working version, should return 0, now returns -1
i guess there are also other bgl.xx affected like setting uniform, but still not certain about this.

As far as i can see there is nothing in doc / release notes about deprication so i bet it is a bug.

**System Information** Operating system: Mint 20 Graphics card: Nvidia 1070 **Blender Version** Broken: 2.91.0-906ff7b8fea8-linux64 (maybe sooner, cant tell and will no more work later) Worked: 2.91.0-2c61c3d733cf-linux64 **Short description of error** bgl.glGetUniformLocation() wrongly always returns -1 **Exact steps for others to reproduce the error** Open a console and run ``` import gpu import bgl vert_3d = ''' uniform mat4 MVP; in vec3 pos; in float primitive_id; out float primitive_id_var; void main() { primitive_id_var = primitive_id; gl_Position = MVP * vec4(pos, 1.0); } ''' primitive_id_frag = ''' uniform float offset; in float primitive_id_var; out vec4 fragColor; void main() { fragColor = vec4(offset + primitive_id_var, 0, 0, 0); } ''' shader = gpu.types.GPUShader(vert_3d, primitive_id_frag) bgl.glGetUniformLocation(shader.program, 'MVP') ``` under working version, should return 0, now returns -1 i guess there are also other bgl.xx affected like setting uniform, but still not certain about this. As far as i can see there is nothing in doc / release notes about deprication so i bet it is a bug.
Author
Member

Added subscriber: @StephenLeger

Added subscriber: @StephenLeger

Added subscriber: @erik85

Added subscriber: @erik85

No idea if this is a bug or not, but you can also use shader.uniform_from_name("MVP").

No idea if this is a bug or not, but you can also use `shader.uniform_from_name("MVP")`.
Author
Member

I guess it is only the tip of the iceberg, where shader.program is no more compatible with bgl.things, facing with many other issues probably related.

I guess it is only the tip of the iceberg, where shader.program is no more compatible with bgl.things, facing with many other issues probably related.

Added subscribers: @fclem, @mano-wii

Added subscribers: @fclem, @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

The problem is that shader.program now always returns 0!
This looks like a bug, but apparently this is intentional:
https://developer.blender.org/diffusion/B/browse/master/source/blender/gpu/intern/gpu_shader.cc$594-599

Introduced in 216d78687

This may be a limitation due to the transition to another render API.

@fclem, are there plans to make shader.program work again?

The problem is that `shader.program` now always returns `0`! This looks like a bug, but apparently this is intentional: https://developer.blender.org/diffusion/B/browse/master/source/blender/gpu/intern/gpu_shader.cc$594-599 Introduced in 216d78687 This may be a limitation due to the transition to another render API. @fclem, are there plans to make `shader.program` work again?

This shouldn't have been broken. It's going to be deprecated but until then it should work.

This shouldn't have been broken. It's going to be deprecated but until then it should work.
Author
Member

Was able to workaround by compile shader and create program by hand through bgl.
Hope bgl will remains at least until we get some kind of replacement -with read buffers ability- / or a full implementation of cad like snap system.

Was able to workaround by compile shader and create program by hand through bgl. Hope bgl will remains at least until we get some kind of replacement -with read buffers ability- / or a full implementation of cad like snap system.

This issue was referenced by f61ad0e101

This issue was referenced by f61ad0e1017bcf924b0529738c08c3a74d1e7476

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-11-30 14:55:50 +01:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83203
No description provided.