Fix T83203 BGL: shader.program wrongly always returns 0

This was a leftover from the 2.91 GPU module refactor.

This is an exception that should be removed when we remove BGL.