source/blender/gpu/opengl/gl_shader.cc
@@ -426,4 +426,9 @@ void GLShader::vertformat_from_shader(GPUVertFormat *format) const
   }
 }
 
+int GLShader::program_handle_get(void) const
+{
+  return (int)this->shader_program_;
+}
+
 /** \} */
